--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "www/index.html",
   "scripts": {
-    "dev": "node esbuild.js"
+    "dev:client": "node esbuild.js",
+    "dev:server": "nodemon save-server.js",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.14.1",
-    "esbuild": "^0.17.10"
+    "concurrently": "^7.6.0",
+    "esbuild": "^0.17.10",
+    "nodemon": "^2.0.20"
   }
 }
